# sync-device-codes

./: pyproject.toml
data/: not-sync-devices.csv  sync-devices.csv
tests/: test_btlecodes.py
