[tool.poetry]
name = "btlecodes"
version = "0.1.0"
description = ""
authors = ["Dmitry Gordienko <d.gordienko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
pandas = "^1.2.4"
requests = "^2.25.1"
redis = "^3.5.3"
ipython = "^7.22.0"
httpie = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
